# OpenGlApp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  flake.nix  launch.vs.json
libs/glad/: glad.c
libs/glad/include/glad/: glad.h
resources/: shader.comp  shader.frag  shader.vert  vertex.glsl
src/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  compute_program.cpp  compute_program.hpp  engine.cpp  engine.hpp  index_buffer.cpp  index_buffer.hpp  main.cpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  storage_buffer.cpp  storage_buffer.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_attribute_data.cpp  vertex_attribute_data.hpp  vertex_attribute_object.cpp  vertex_attribute_object.hpp  vertex_buffer.cpp  vertex_buffer.hpp
